<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/llr"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/top_bg" >

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:scaleType="centerInside"
            android:src="@drawable/iconfont" />

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button_back"
            android:layout_alignBottom="@+id/button_back"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:text="新增订单"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/s_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/shape_30_green"
            android:text="保存"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>
    <!-- The PullToRefreshWebView replaces a standard WebView widget. -->

    <com.jingchen.pulltorefresh.pullableview.PullToRefreshLayout
        android:id="@+id/refresh_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/com_bottom"
        android:layout_below="@+id/llr" >

        <include layout="@layout/refresh_head" />
        <!-- 支持所有实现Pullable接口的View -->

        <com.jingchen.pulltorefresh.pullableview.PullableScrollView
            android:id="@+id/content_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff" >

            <LinearLayout
                android:id="@+id/linl"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/lin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/border"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/add_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:hint="收货人" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/gray" />

                    <EditText
                        android:id="@+id/add_number"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:hint="联系方式" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/gray" />

                    <TextView
                        android:id="@+id/add_dizhi"
                        android:layout_width="fill_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="   省.市.区"
                        android:textSize="20sp" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/gray" />

                    <EditText
                        android:id="@+id/add_xxdizhi"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:hint="详细地址" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/gray" />

                    <EditText
                        android:id="@+id/add_idnum"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:hint="身份证号码" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/gray" />

                    <EditText
                        android:id="@+id/add_idname"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:hint="身份证姓名" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/gray" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/zhuyi"
                        android:textColor="#FF0000" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/gray" />

                    <ListView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listsale" >
                    </ListView>

                    <Button
                        android:id="@+id/add_order"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#ffffff"
                        android:text="+新增商品"
                        android:textColor="#00FFFF" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/youfei"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lin"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/youfei" />

                    <View
                        android:id="@+id/v1"
                        android:layout_width="fill_parent"
                        android:layout_height="3dp"
                        android:layout_below="@+id/youfei" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/v1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/bc_caigou" />
                </LinearLayout>
            </LinearLayout>
        </com.jingchen.pulltorefresh.pullableview.PullableScrollView>

        <include layout="@layout/load_more" />
    </com.jingchen.pulltorefresh.pullableview.PullToRefreshLayout>

    <LinearLayout
        android:id="@+id/com_bottom"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gwc"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:background="#ffffff"
            android:gravity="center|right"
            android:text="销售总额："
            android:textSize="18dp" />

        <TextView
            android:id="@+id/add_zonge"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:gravity="center|left"
            android:text="销售总额："
            android:textSize="18dp" />

        <TextView
            android:id="@+id/queding"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#FF0000"
            android:gravity="center"
            android:text="确定"
            android:textSize="20dp" />
    </LinearLayout>

</RelativeLayout>